HOW TO OPEN IF BROKEN:
1. RIGHT CLICK ON SOLUTION (PURPLE FILE ON TOP OF SOLUTION EXPLORER) AND SELECT RESTORE NUGET PACKAGES. THEN CLEAN SOLUTION THEN REBUILD

2. IF IT DOESN'T WORK, MANUALLY NAVIGATE TO THE REPOS FOLDER OF THIS PROJECT, DELETE THE FOLDERS "BIN" AND "OBJ" (MAKE SURE NA NAKASARADO ITONG PROJECT)

3. IF DONE WITH STEP 2, DO STEP 1.

--- a/MyBank-Draft3/AppWindows/Customer/CustomerWindow.xaml
+++ b/MyBank-Draft3/AppWindows/Customer/CustomerWindow.xaml
@@ -36,14 +36,7 @@
                         </WrapPanel>
                     </Button>
 
-                    <Button x:Name="CategoriesBTN" materialDesign:ButtonAssist.CornerRadius="6" materialDesign:ElevationAssist.Elevation="Dp0" Width="Auto" Height="35" Background="#161d24" BorderBrush="#161d24" Margin="0 15 0 0">
-                        <WrapPanel Width="120">
-                            <materialDesign:PackIcon Kind="Book" VerticalAlignment="Center" Margin="0 0 15 0" Foreground="White"/>
-                            <TextBlock Foreground="White">Categories</TextBlock>
-                        </WrapPanel>
-                    </Button>
-
-                    <Button x:Name="Reports" materialDesign:ButtonAssist.CornerRadius="6" materialDesign:ElevationAssist.Elevation="Dp0" Width="Auto" Height="35" Background="#161d24" BorderBrush="#161d24" Margin="0 15 0 0">
+                    <Button x:Name="Reports" materialDesign:ButtonAssist.CornerRadius="6" materialDesign:ElevationAssist.Elevation="Dp0" Width="Auto" Height="35" Background="#161d24" BorderBrush="#161d24" Margin="0 15 0 0" Click="Reports_Click">
                         <WrapPanel Width="120">
                             <materialDesign:PackIcon Kind="BarChart" VerticalAlignment="Center" Margin="0 0 15 0" Foreground="White"/>
                             <TextBlock Foreground="White">Reports</TextBlock>
