--- a/MyBank-Draft3/AppWindows/Admin/AdminWindow.xaml
+++ b/MyBank-Draft3/AppWindows/Admin/AdminWindow.xaml
@@ -3,10 +3,57 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:MyBank_Draft3.AppWindows.Admin"
         mc:Ignorable="d"
-        Title="AdminWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Title="AdminWindow" Height="700" Width="1200" WindowStartupLocation="CenterScreen" WindowStyle="None" AllowsTransparency="True" Background="Transparent">
+    <Border CornerRadius="20" Background="#12171d" BorderBrush="Black" >
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+
+            <materialDesign:ColorZone Grid.Column="0" Background="#161d24" Height="700" CornerRadius="20 0 0 20" >
+                <StackPanel Margin="15">
+
+                    <StackPanel Orientation="Horizontal" Height="50" Width="162" Margin="0 0 0 25">
+                        <Image Source="/Assets/Pictures/logo.png" />
+                        <TextBlock Text="MyBank" FontSize="25" FontWeight="Medium" FontFamily="Inter" Foreground="#327b3b" VerticalAlignment="Center"/>
+                    </StackPanel>
+
+                    <Button x:Name="customerListBTN" materialDesign:ButtonAssist.CornerRadius="6" materialDesign:ElevationAssist.Elevation="Dp0" Width="Auto" Height="35" Background="#161d24" BorderBrush="#161d24" Margin="0 15 0 0" Click="Button_Click">
+                        <WrapPanel Width="120">
+                            <materialDesign:PackIcon Kind="AccountGroup" VerticalAlignment="Center" Margin="0 0 15 0" Foreground="White"/>
+                            <TextBlock Foreground="White">Clients</TextBlock>
+                        </WrapPanel>
+                    </Button>
+
+                    <Button x:Name="staffBTN" materialDesign:ButtonAssist.CornerRadius="6" materialDesign:ElevationAssist.Elevation="Dp0" Width="Auto" Height="35" Background="#161d24" BorderBrush="#161d24" Margin="0 15 0 0" Click="staffBTN_Click">
+                        <WrapPanel Width="120">
+                            <materialDesign:PackIcon Kind="AccountMultiple" VerticalAlignment="Center" Margin="0 0 15 0" Foreground="White"/>
+                            <TextBlock Foreground="White">Staff</TextBlock>
+                        </WrapPanel>
+                    </Button>
+
+                    <Button x:Name="SettingsBTN" materialDesign:ButtonAssist.CornerRadius="6" materialDesign:ElevationAssist.Elevation="Dp0" Width="Auto" Height="35" Background="#161d24" BorderBrush="#161d24" Margin="0 15 0 0" Click="SettingsBTN_Click">
+                        <WrapPanel Width="120">
+                            <materialDesign:PackIcon Kind="Gear" VerticalAlignment="Center" Margin="0 0 15 0" Foreground="White"/>
+                            <TextBlock Foreground="White">Settings</TextBlock>
+                        </WrapPanel>
+                    </Button>
+
+                    <Button materialDesign:ButtonAssist.CornerRadius="6" materialDesign:ElevationAssist.Elevation="Dp0" Width="Auto" Height="35" Background="#161d24" BorderBrush="#161d24" Margin="0 300 0 0">
+                        <WrapPanel Width="120">
+                            <materialDesign:PackIcon Kind="AccountArrowLeft" VerticalAlignment="Center" Margin="0 0 15 0" Foreground="Red"/>
+                            <TextBlock Foreground="Red">Log Out</TextBlock>
+                        </WrapPanel>
+                    </Button>
+                </StackPanel>
+            </materialDesign:ColorZone>
+
+            <Frame Grid.Column="1" x:Name="adminWindowFrame" Height="Auto" Width="1000" NavigationUIVisibility="Hidden"/>
+
+        </Grid>
+    </Border>
 </Window>
